--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-/* вторичный цвет #757575 */
-/* белый #FFFFFF */
-/* адрес rgba(255, 255, 255, 0.6) */
-/* цвет фона шапка #2F303A
-bgc - наша команда #F5F4FA*
-bgc - footer #2F303A*/
-
-
-
 :root {
    --primary-text-color:#212121;
    --main-background-color:#E5E5E5;
@@ -16,6 +7,10 @@ bgc - footer #2F303A*/
 body {
    background-color: var(--main-background-color);
    color: #757575;
+   font-family: Roboto, sans-serif;
+  
+   font-size: 14px;
+   letter-spacing: 0.03em;
 }
 
 /* Header */
@@ -24,16 +19,18 @@ body {
 
 .logo {
    color: #000000;
+   font-family: Raleway, bold;
+   font-weight: 700;
+   font-size: 26px;
+   line-height: 1.19;
+
+   text-decoration: none;
+
 }
 
 .logo-item {
    color: var(--accent-color);
-}
-
-button {
-   color:#FFFFFF;
-   background-color: var(--accent-color);
-   border-color: transparent;
+   
 }
 
 .list {
@@ -42,8 +39,11 @@ button {
 
 /* Site nav */
 
-.site-nav .link {
+.site-nav.list {
    color: var(--primary-text-color);
+   font-weight: 500;
+   line-height: 1.14;
+   letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -57,7 +57,11 @@ button {
 
 .contacts .contact {
    color: #757575;
+   font-weight: 500;
+   line-height: 1.14;
+   letter-spacing: 0.02em;
 }
+
  .contacts .contact:hover,
  .contacts .contact:focus {
     color: var(--accent-color);
@@ -68,17 +72,80 @@ button {
 /* Hero */
 
 .hero-title {
+   background: #2F303A;
    color: #FFFFFF;
+   font-weight: 900;
+   font-size: 44px;
+   line-height: 1.36;
+   text-align: center;
+   letter-spacing: 0.06em;
+   text-transform: uppercase;
 }
+
+button {
+   background-color: var(--accent-color);
+   color: #FFFFFF;
+   border-color: transparent;
+   font-family: inherit;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 1.88;
+   letter-spacing: 0.06em;
+}
+
+/* Section features */
 
 .section-title {
    color: var(--primary-text-color);
+   font-weight: 700;
+   font-size: 36px;
+   line-height: 1.17;
+   text-align: center;
 }
 
 .feature-title {
    color: var(--primary-text-color);
+   font-weight: 700;
+   line-height: 1.14;
+   text-transform: uppercase;
 }
 
-.team-name {
+.feature-description {
+   font-weight: 400;
+   line-height: 1.71;
+}
+
+/* Section Our team */
+
+.teammate-name {
    color: var(--primary-text-color);
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.19;
+}
+
+.position {
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.19;
+}
+
+/* Footer */
+
+.footer {
+   background: #2F303A;
+   font-weight: 400;
+}
+
+.address {
+   color: #FFFFFF;
+   font-style: normal;
+   line-height: 0.58;
+}
+
+.contacts-list-item {
+   color: rgba(255, 255, 255, 0.6);
+   font-style: normal;
+   line-height: 0.58;
+   text-decoration: none;
 }
